# repypi

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/repypi/: main.py
