# More docs at https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# Most of project config is done here

[metadata]
name = repypi
version = attr: repypi.VERSION
author = you
author_email = you@gmail.com
description = This is a short description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://link-to-project-webpage.com
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

# Add project requirements below
install_requires =
    psutil
    requests


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    repypi = repypi.main:main
